[tool.poetry]
name = "deep-learning-playground"
version = "0.1.0"
description = "trying to learn deep learning"
authors = ["naidneelttil"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
numpy = "1.26.0"
sklearn = "^0.0.post12"
keras = "3.0.0"
tensorflow = "2.16.2"
pillow = "^10.3.0"
h5py = "^3.11.0"
matplotlib = "^3.9.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
