[tool.poetry]
name = "Deep-Learning-Playground"
version = "0.1.0"
description = "trying to learn deep learning"
authors = ["naidneelttil"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
numpy = "1.26.0"
scikit-learn = "1.5.0"
keras = "3.0.0"
tensorflow = "2.16.2"
pillow = "^10.3.0"
h5py = "^3.11.0"
matplotlib = "^3.9.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"

[tool.poetry.scripts]
main = 'main:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
